// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hide renders 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <div
      class=""
    />
  </div>
</DocumentFragment>
`;

exports[`Hide renders with breakpoint props 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

@media screen and (max-width:31.99em) {
  .c1 {
    display: none;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Hide renders with breakpoint props 2`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

@media screen and (max-width:31.99em) {

}

@media screen and (min-width:32em) and (max-width:39.99em) {
  .c1 {
    display: none;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Hide renders with breakpoint props 3`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

@media screen and (max-width:31.99em) {

}

@media screen and (min-width:32em) and (max-width:39.99em) {

}

@media screen and (min-width:40em) and (max-width:47.99em) {
  .c1 {
    display: none;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Hide renders with breakpoint props 4`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

@media screen and (max-width:31.99em) {

}

@media screen and (min-width:32em) and (max-width:39.99em) {

}

@media screen and (min-width:40em) and (max-width:47.99em) {

}

@media screen and (min-width:48em) and (max-width:63.99em) {
  .c1 {
    display: none;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Hide renders with breakpoint props 5`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

@media screen and (max-width:31.99em) {

}

@media screen and (min-width:32em) and (max-width:39.99em) {

}

@media screen and (min-width:40em) and (max-width:47.99em) {

}

@media screen and (min-width:48em) and (max-width:63.99em) {

}

@media screen and (min-width:64em) and (max-width:79.99em) {
  .c1 {
    display: none;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Hide renders with breakpoint props 6`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

@media screen and (max-width:31.99em) {

}

@media screen and (min-width:32em) and (max-width:39.99em) {

}

@media screen and (min-width:40em) and (max-width:47.99em) {

}

@media screen and (min-width:48em) and (max-width:63.99em) {

}

@media screen and (min-width:64em) and (max-width:79.99em) {

}

@media screen and (min-width:80em) {
  .c1 {
    display: none;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Hide renders with print prop 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

@media print {
  .c1 {
    display: none;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;
